modifier le boutton search_button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </h1>
                         <div class="searchBar">
                             <input class="form-control mr-sm-2 searchBar__input" type="search" placeholder="Rechercher une recette, un ingrédient, ..." aria-label="Search">
-                            <button class="searchBar__button" type="submit"><i class="fa fa-search"></i></button>
+                            <button class="searchBar__button" type="submit" aria-label="Rechercher"><i class="fa fa-search"></i></button>
                         </div>
                     </div>
                 </div>
