--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer><p class="footerPar">Les Petits Plats </p></footer>
 
     <!-- Main script -->
-    <script src="./assets/scripts/main.js"type="module"></script>
+    <script src="assets/scripts/main.js"type="module"></script>
 
     <!-- bootstrap & Font Awesome scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
