--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <section class="hero-section" >
+        <section>
             <div class="container-fluid hero">
                 <div class="container d-flex flex-column align-items-center">
                     <div class="contentHero col-lg-8 col-12">
